--- a/recipe/lowfi-prototypes/index.html
+++ b/recipe/lowfi-prototypes/index.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Low-Fi Prototypes </h1>
         <p> <img src="photos/IMG_8354.JPG"> </p>
-        <p> <img src="photos/IMG_8355.jpg"> </p>
-        <p> <img src="photos/IMG_8356.jpg"> </p>
+        <p> <img src="photos/IMG_8355.JPG"> </p>
+        <p> <img src="photos/IMG_8356.JPG"> </p>
         
     </body>
 </html>
